[LayoutNG] Match AddSelfOutlineRects to legacy

For AddSelfOutlineRects to reach to LayoutInline that has
a continuation, this patch splits the logic in
AddSelfOutlineRects so that it can be called recursively.

In doing so, the logic flow and functions are organized to
match to the one in LayoutObject tree.

Bug: 889721
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: I79e00ea7c37c94bf06e564a69fe7fc5da4f72349
Reviewed-on: https://chromium-review.googlesource.com/1246881
Commit-Queue: Koji Ishii <kojii@chromium.org>
Reviewed-by: Aleks Totic <atotic@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595028}
Former-commit-id: 12e458fa85e147a866fd0704908edcba16677bcd